[project]
name = "querybot-ai"
version = "1.0.0"
description = "AI-powered query assistant built with Streamlit, PostgreSQL, Docker, and Google's Generative AI SDK."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "google-generativeai>=0.8.5",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
]
